--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2019</span>
+          <span class="copyright">Copyright &copy; Josh Abreu 2019</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
